<resources>
    <string name="app_name">GuitarTrainer</string>
    <string name="about">ABOUT</string>
    <string name="songs">SONGS</string>
    <string name="notes">NOTES</string>
    <string name="player">PLAYER</string>
    <string name="chords">CHORDS</string>
    <string name="about_button">ABOUT</string>
    <string name="buttonPlay">Play</string>
    <string name="buttonPause">Pause</string>
    <string name="buttonForward">Forward</string>
    <string name="buttonStop">Stop</string>
    <string name="songs_button">SONGS</string>
    <string name="notes_button">NOTES</string>
    <string name="player_button">PLAYER</string>
    <string name="chords_button">CHORDS</string>
    <string name="chords_play_button">Play a chord</string>
    <string name="chords_textView">Chord : A major</string>
    <string name="songs_textView">12 bar blues tab.</string>
    <string name="note_A">Note A</string>
    <string name="note_B">Note B</string>
    <string name="note_E_1">Note E - 1st string</string>
    <string name="note_E_2">Note E - 6th string</string>
    <string name="note_D">Note D</string>
    <string name="note_G">Note G</string>
    <string name="app_Version">Version : 1.0.0</string>
    <string name="app_Creator">Author : Piotr Muzyka</string>
    <string name="app_Website">www.guitarapp.yarr</string>
    <string name="app_ReleaseDate">Release Date : 06-06-2017</string>
    <string name="chords_desc">This activity contains playable sounds of each guitar chord. On the left side a tab for chord is presented - it shows which strings on which frets should be pressed in order to play a chord. On the right side there is a play button - when clicked it plays a recording of a corresponding chord. Example : A major chord. \nLibraries : MediaPlayer. \nMusic source : Author Recordings - available in resource files in raw</string>
    <string name="about_desc">This activity contains basic information about an app, version, author and release date. \nLibraries : MediaPlayer. \nMusic source : Author Recordings - available in resource files in raw</string>
    <string name="notes_desc">This activity contains playable sounds of each guitar string note E-A-D-G-B-E. \nLibraries : MediaPlayer. \nMusic source : Author Recordings - available in resource files in raw </string>
    <string name="songs_desc">This activity contains a couple of song recordings with tabs which describe how to play them on guitar.\nLibraries : MediaPlayer. \nMusic source : Author Recordings - available in resource files in raw </string>
    <string name="player_desc">This activity contains player which allows to select an mp3 file located on your mobile and play it. Files are added via search for audiofiles across the phone. Buttons allow to make the following actions with current recording - play, forward, pause or stop. \nLibraries : MediaPlayer </string>
</resources>
