<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.android.guitartrainer.ChordsActivity"
    android:orientation="vertical"
    android:background="@color/colorChords">

    <EditText
        android:id="@+id/editText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textPersonName"
        android:text="@string/chords" />

    <TextView
        android:id="@+id/textView2"
        style="@style/ActivityStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="@dimen/TextViewPadding"
        android:text="@string/chords_desc" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="149dp"
        android:layout_weight="4.38"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="3"
            android:padding="16dp"
            app:srcCompat="@drawable/a_major" />

        <LinearLayout
            android:layout_width="155dp"
            android:layout_height="180dp"
            android:orientation="vertical">

            <TextView
                android:id="@+id/textView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/chords_textView" />


            <ProgressBar
                android:id="@+id/progressBar3"
                style="?android:attr/progressBarStyleHorizontal"
                android:layout_width="match_parent"
                android:layout_height="21dp"
                android:layout_marginTop="20dp"
                android:max="100"
                android:progress="50"
                android:visibility="visible"
                tools:visibility="visible" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <ImageButton
                    android:id="@+id/buttonPlay4"
                    android:layout_width="wrap_content"
                    android:layout_height="@dimen/mediaButtonHeight"
                    android:layout_weight="1"
                    android:text="@string/buttonPlay"
                    app:srcCompat="@android:drawable/ic_media_play" />

                <ImageButton
                    android:id="@+id/buttonStop4"
                    android:layout_width="wrap_content"
                    android:layout_height="@dimen/mediaButtonHeight"
                    android:layout_weight="1"
                    android:text="@string/buttonStop"
                    app:srcCompat="@android:drawable/picture_frame" />

            </LinearLayout>

        </LinearLayout>

    </LinearLayout>

    <Button
        android:id="@+id/button3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/songs_button"
        android:layout_gravity="center"/>

</LinearLayout>