<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorNotes"
    tools:context="com.example.android.guitartrainer.PlayerActivity">

    <TextView
        android:id="@+id/LabelNotes"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="15dp"
        style="@style/ActivityStyle"
        android:text="@string/notes" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="@dimen/TextViewPadding"
        android:text="@string/notes_desc"
        style="@style/ActivityStyle"
        tools:layout_weight="0" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/ListView1"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/imageView2"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="4"
            app:srcCompat="@drawable/strings" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/textView7"
                    android:layout_width="wrap_content"
                    android:layout_height="30dp"
                    android:layout_weight="1"
                    android:text="@string/note_E_1" />

                <ImageButton
                    android:id="@+id/buttonPlay5"
                    android:layout_width="wrap_content"
                    android:layout_height="30dp"
                    android:text="@string/buttonPlay"
                    android:layout_marginLeft="10dp"
                    app:srcCompat="@android:drawable/ic_media_play" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/textView8"
                    android:layout_width="wrap_content"
                    android:layout_height="30dp"
                    android:layout_weight="1"
                    android:text="@string/note_A" />

                <ImageButton
                    android:id="@+id/buttonPlay6"
                    android:layout_width="wrap_content"
                    android:layout_height="30dp"
                    android:text="@string/buttonPlay"
                    app:srcCompat="@android:drawable/ic_media_play" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/textView9"
                    android:layout_width="wrap_content"
                    android:layout_height="30dp"
                    android:layout_weight="1"
                    android:text="@string/note_D" />

                <ImageButton
                    android:id="@+id/buttonPlay7"
                    android:layout_width="wrap_content"
                    android:layout_height="30dp"
                    android:text="@string/buttonPlay"
                    app:srcCompat="@android:drawable/ic_media_play" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/textView10"
                    android:layout_width="wrap_content"
                    android:layout_height="30dp"
                    android:layout_weight="1"
                    android:text="@string/note_G" />

                <ImageButton
                    android:id="@+id/buttonPlay8"
                    android:layout_width="wrap_content"
                    android:layout_height="30dp"
                    android:text="@string/buttonPlay"
                    app:srcCompat="@android:drawable/ic_media_play" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/textView11"
                    android:layout_width="wrap_content"
                    android:layout_height="30dp"
                    android:layout_weight="1"
                    android:text="@string/note_B" />

                <ImageButton
                    android:id="@+id/buttonPlay9"
                    android:layout_width="wrap_content"
                    android:layout_height="30dp"
                    android:text="@string/buttonPlay"
                    app:srcCompat="@android:drawable/ic_media_play" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/textView12"
                    android:layout_width="wrap_content"
                    android:layout_height="30dp"
                    android:layout_weight="1"
                    android:text="@string/note_E_2" />

                <ImageButton
                    android:id="@+id/buttonPlay10"
                    android:layout_width="wrap_content"
                    android:layout_height="30dp"
                    android:text="@string/buttonPlay"
                    app:srcCompat="@android:drawable/ic_media_play" />
            </LinearLayout>


        </LinearLayout>

    </LinearLayout>

    <Button
        android:id="@+id/button2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/chords_button"
        android:layout_marginTop="60dp"
        android:layout_gravity="center"
        />


</LinearLayout>