<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorSongs"
    tools:context="com.example.android.guitartrainer.PlayerActivity">

    <EditText
        android:id="@+id/editText3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textPersonName"
        android:text="Name" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="@dimen/TextViewPadding"
        style="@style/ActivityStyle"
        android:text="@string/songs_desc" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="0.31"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/imageView"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="0.31"
                android:padding="16dp"
                app:srcCompat="@drawable/bar_blues_tab" />

            <TextView
                android:id="@+id/textView"
                style="@style/ActivityStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="0.31"
                android:text="@string/songs_textView" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical">

            <ProgressBar
                android:id="@+id/progressBar3"
                style="?android:attr/progressBarStyleHorizontal"
                android:layout_width="match_parent"
                android:layout_height="21dp"
                android:layout_marginTop="20dp"
                android:max="100"
                android:progress="50"
                android:visibility="visible"
                tools:visibility="visible" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <ImageButton
                    android:id="@+id/buttonPlay2"
                    android:layout_width="wrap_content"
                    android:layout_height="@dimen/mediaButtonHeight"
                    android:layout_weight="1"
                    android:text="@string/buttonPlay"
                    app:srcCompat="@android:drawable/ic_media_play" />

                <ImageButton
                    android:id="@+id/buttonPause2"
                    android:layout_width="wrap_content"
                    android:layout_height="@dimen/mediaButtonHeight"
                    android:layout_weight="1"
                    android:text="@string/buttonPause"
                    app:srcCompat="@android:drawable/ic_media_pause" />

                <ImageButton
                    android:id="@+id/buttonForward2"
                    android:layout_width="wrap_content"
                    android:layout_height="@dimen/mediaButtonHeight"
                    android:layout_weight="1"
                    android:text="@string/buttonForward"
                    app:srcCompat="@android:drawable/ic_media_ff" />

                <ImageButton
                    android:id="@+id/buttonStop2"
                    android:layout_width="wrap_content"
                    android:layout_height="@dimen/mediaButtonHeight"
                    android:layout_weight="1"
                    android:text="@string/buttonStop"
                    app:srcCompat="@android:drawable/picture_frame" />

            </LinearLayout>

        </LinearLayout>

    </LinearLayout>

    <Button
        android:id="@+id/button4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/player_button" />

</LinearLayout>